# jing-lang

./: .commitlintrc.json  .gitattributes  .gitignore  .release-please-config.json  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GETTING_STARTED.md  HOW_IT_WORKS.md  LANGUAGE_REFERENCE.md  Makefile  README.md  SIMPLIFICATION_PLAN.md  VISUAL_GUIDE.md  clippy.toml  deny.toml  examples.md  pr_description.md  rustfmt.toml  test.jl  test_lexer.rs
.github/: copilot-instructions.md
.github/workflows/: architecture-validation.yml  ci.yml  conventional-commits.yml  cross-platform.yml  maintenance.yml  pr-validation.yml  release-please.yml
docs/: DEVELOPMENT.md  DEVELOPMENT_GUIDELINES.md  HOW_IT_WORKS.md  HTTP_FUNCTION_CALLING_ARCHITECTURE.md  HTTP_HANDLERS.md  HTTP_SERVER.md  IO_IMPLEMENTATION_SUMMARY.md  LANGUAGE_REFERENCE.md  README.md  VISUAL_GUIDE.md
examples/: INDEX.md  advanced.jing  advanced.jl  calculator.jl  confusing_behavior.jing  debug_function.jing  demo.jing  demo.jl  fibonacci.jl  file_io.jing  fizzbuzz.jl  function_calling_challenge.jing  handler_functions_demo.jing  http_server.jing  http_server_with_handlers.jing  modern_api_demo.jing  recursive.jing  server_lifecycle_demo.jing  simple_function.jl  simple_handlers.jing  test_custom_routes.jing
src/: ast.rs  bytecode.rs  compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  test_components.rs  test_simple.rs  token.rs  value.rs  vm.rs
src/builtins/: core.rs  http.rs  io.rs  math.rs  mod.rs  string.rs
src/features/: mod.rs
src/registry/: mod.rs
tests/: compiler_vm_tests.rs  compiler_vm_tests.rs.bak  error_tests.rs  http_handlers_tests.rs  http_tests.rs  integration_tests.rs  io_tests.rs  lexer_tests.rs  parser_tests.rs  value_tests.rs
