[package]
name = "jing"
version = "0.1.0"
edition = "2021"
description = "A simple toy programming language with virtual machine implementation"
license = "MIT"
authors = ["Elson Wu <elson@example.com>"]
repository = "https://github.com/elsonwu/jing-lang"
homepage = "https://github.com/elsonwu/jing-lang"
documentation = "https://github.com/elsonwu/jing-lang"
readme = "README.md"
keywords = ["compiler", "interpreter", "vm", "language", "educational"]
categories = ["compilers", "development-tools"]
rust-version = "1.70.0"

[lib]
name = "jing"
path = "src/lib.rs"

[[bin]]
name = "jing"
path = "src/main.rs"

[dependencies]
# HTTP server support
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde_json = "1.0"

# Linting configuration
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Focus on correctness and suspicious patterns only
correctness = "deny"
suspicious = "deny"

# Allow all other categories for educational code
pedantic = "allow"
nursery = "allow"
style = "allow"
complexity = "allow"
perf = "allow"

[dev-dependencies]
tempfile = "3.21.0"
reqwest = "0.12"
tokio-test = "0.4"
